--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ div.tags {
 	</section>
 	<section id="projects">
 		<h2>Projects</h2>
-		<section class="flask python typescript frontend backend">
+		<section class="research flask python typescript frontend backend">
 			<h3><span>2022–Pr.</span> XAFS Spectra Analyzer</h3>
 			<p>Developing an online tool to analyze experimental X-ray absorption spectra. Made with Python, Flask, BokehJS, and TypeScript.</p>
 		</section>
@@ -316,7 +316,7 @@ div.tags {
 			<p><a href="https://github.com/webpro/DOMtastic">DOMtastic</a> is a small, fast, and modular DOM &amp; event library for modern browsers.</p>
 			<p>Added jQuery compatibility modules.</p>
 		</section>
-		<section class="cpp blockchain torrent frontend backend">
+		<section class="c/c++ blockchain torrent frontend backend">
 			<h3><span>2014–2016</span> Twister contributor</h3>
 			<p><a href="http://twister.net.co/">Twister</a> is the fully decentralized P2P microblogging platform leveraging from the free software implementations of Bitcoin and BitTorrent protocols.</p>
 			<p>Actively contributed to the Twister core code (C/C++) and related projects (web-based interface, bots, desktop version).</p>
@@ -330,7 +330,7 @@ div.tags {
 			<p>Repeating of math operators at the broken line and the new line in inline equations is used in Cyrillic mathematical typography</p>
 			<p>Developed <a href="https://ctan.org/pkg/rmathbr">rmathbr</a> package implements it for LaTeX (all TeX engines are supported: pdfTeX, XeTeX, and LuaTeX).</p>
 		</section>
-		<section class="c/c++ openmp math">
+		<section class="research c/c++ openmp math">
 			<h3><span>2008-2014</span> Normal Forms</h3>
 			<p>Development of <a href="https://github.com/dryabov/normal-form">Normal Forms</a>, the C++ library for calculation of Hamiltonian normal form (parallelized, multi-precision, memory-efficient code).</p>
 		</section>
@@ -366,7 +366,7 @@ div.tags {
 			<h3><span>2010</span> Internet Mathematics 2010</h3>
 			<p>Winner (the 1st place) of the all-Russian "<a target="_blank" href="http://imat2010.yandex.ru/">Internet mathematics 2010</a>" contest by Yandex. The task was to predict future traffic jams from known historic data.</p>
 		</section>
-		<section class="physics">
+		<section class="research physics">
 			<h3><span>2004</span> Dynasty Foundation</h3>
 			<p>The <a target="_blank" href="http://www.dynastyfdn.com/programs/education/laureates/students?page=6">awardee</a> of the Dynasty foundation scholarships for student-physicists.</p>
 		</section>
