--- a/index.html
+++ b/index.html
@@ -51,9 +51,21 @@ ol, ul {
 	margin: 0;
 	padding-bottom: 1rem;
 }
+#publications ul {
+	padding-top: 2rem;
+}
 a {
 	text-decoration: underline;
 	text-decoration-thickness: .05rem;
+}
+sub, sup {
+	line-height: 0;
+}
+table {
+	border-spacing: 0;
+}
+td:first-child {
+	padding-left: 0;
 }
 aside, main {
 	margin: 0;
@@ -189,10 +201,10 @@ div.tags {
 	<h1>Denis Ryabov</h1>
 	<div id="about">
 		<h2>About</h2>
-		<p>Fun of programming and researching.</p>
 		<table>
-			<tr><td><b>Email</b>:</td><td><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></td></tr>
-			<tr><td><b>Address</b>:</td><td>Rostov-on-Don, Russia</td></tr>
+			<tr><td colspan="2"><p>Fun of programming and researching.</p></td></tr>
+			<tr><td><p><b>Email</b>:</p></td><td><p><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></p></td></tr>
+			<tr><td><p><b>Address</b>:</p></td><td><p>Rostov-on-Don, Russia</p></td></tr>
 		</table>
 	</div>
 	<div id="skills">
@@ -368,7 +380,7 @@ div.tags {
 		</section>
 		<section class="research physics">
 			<h3><span>2004</span> Dynasty Foundation</h3>
-			<p>The <a target="_blank" href="http://www.dynastyfdn.com/programs/education/laureates/students?page=6">awardee</a> of the Dynasty foundation scholarships for student-physicists.</p>
+			<p>The <a target="_blank" href="http://www.dynastyfdn.com/programs/education/laureates/students?page=6">awardee</a> of the <a href="https://en.wikipedia.org/wiki/Dynasty_Foundation">Dynasty foundation</a> scholarships for student-physicists.</p>
 		</section>
 	</section>
 
