--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ div.tags {
 	<div id="about">
 		<h2>About</h2>
 		<table>
-			<tr><td colspan="2"><p>Fun of programming and researching.</p></td></tr>
+			<tr><td colspan="2"><p>Fun of programming and researching.<br>Trying to make the world a better place.</p></td></tr>
 			<tr><td><p><b>Email</b>:</p></td><td><p><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></p></td></tr>
 			<tr><td><p><b>Address</b>:</p></td><td><p>Rostov-on-Don, Russia</p></td></tr>
 		</table>
