--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ div.tags {
 		<h2>Work</h2>
 		<section class="global">
 			<h3><span>2010–Pr.</span> Sole proprietorship</h3>
-			<p>Work on different own and 3rd-party IT projects.</p>
+			<p>Work on different own and 3rd-party IT projects (frontend/backend development: PWA/js, Joomla/PHP/js, WordPress/PHP/js, Flask/Python/js, nodejs).</p>
 		</section>
 		<section class="global">
 			<h3><span>2003–Pr.</span> Institute of Physics, Southern Federal University</h3>
@@ -287,7 +287,7 @@ div.tags {
 		<section class="global">
 			<h3><span>2011–2018</span> Kuneri Ltd.</h3>
 			<p><i>Lead Developer</i></p>
-			<p>Worked as a contractor, developed MobileJoomla, PageSpeed Ninja, and other projects.</p>
+			<p>Worked as a contractor, developed MobileJoomla (250K+ registered users), PageSpeed Ninja (20K+ installs), and other projects.</p>
 		</section>
 	</section>
 	<section id="projects">
