--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ html {
 	padding: 0;
 }
 body {
-	margin: 0 auto;
+	margin: 0 auto 2rem;
 	text-align: center;
 	font-size: 1rem;
 	color: #333;
@@ -236,6 +236,10 @@ div.tags {
 			<tr><td colspan="2"><p>Fun of programming and researching.<br>Trying to make the world a better place.</p></td></tr>
 			<tr><td><p><b>Email</b>:</p></td><td><p><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></p></td></tr>
 			<tr><td><p><b>Address</b>:</p></td><td><p>Rostov-on-Don, Russia (ready to relocate)</p></td></tr>
+			<tr><td colspan="2">&nbsp;</td></tr>
+			<tr><td><p><b>Linkedin</b>:</p></td><td><p><a href="https://www.linkedin.com/in/dryabov/">linkedin.com/in/dryabov</a></p></td></tr>
+			<tr><td><p><b>GitHub</b>:</p></td><td><p><a href="https://github.com/dryabov">github.com/dryabov</a></p></td></tr>
+			<tr><td><p><b>G Scholar</b>:</p></td><td><p><a href="https://scholar.google.com/citations?user=wbf8vgcAAAAJ&hl=en">scholar.google.com/citations?user=wbf8vgcAAAAJ</a></p></td></tr>
 		</table>
 	</div>
 	<div id="skills">
