--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ div.tags {
 	</div>
 	<div id="skills">
 		<h2>Skills</h2>
-		<p>Select skills you are interested to see more details:</p>
+		<p>Select the skills you are interested in to see more details:</p>
 		<div class="skill-tags">
 		<label><input type="checkbox"><span>backend</span></label>
 		<label><input type="checkbox"><span>blockchain</span></label>
