--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ h1 {
 	font-size: 2.5rem;
 	text-shadow: .05rem 0 0 #333;
 	text-decoration: underline;
+	font-family: 'Barlow Condensed', sans-serif;
 }
 h2 {
 	font-size: 2rem;
@@ -68,8 +69,14 @@ sub, sup {
 table {
 	border-spacing: 0;
 }
+td {
+	vertical-align: baseline;
+}
 td:first-child {
 	padding-left: 0;
+}
+td a {
+	word-break: break-all;
 }
 aside, main {
 	margin: 0;
@@ -252,9 +259,9 @@ div.tags {
 			<tr><td><p><b>Email</b>:</p></td><td><p><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></p></td></tr>
 			<tr><td><p><b>Address</b>:</p></td><td><p>Rostov-on-Don, Russia (ready to relocate)</p></td></tr>
 			<tr><td colspan="2">&nbsp;</td></tr>
-			<tr><td><p><b>Linkedin</b>:</p></td><td><p><a href="https://www.linkedin.com/in/dryabov/">linkedin.com/in/dryabov</a></p></td></tr>
+			<tr><td><p><b>LinkedIn</b>:</p></td><td><p><a href="https://www.linkedin.com/in/dryabov/">linkedin.com/in/dryabov</a></p></td></tr>
 			<tr><td><p><b>GitHub</b>:</p></td><td><p><a href="https://github.com/dryabov">github.com/dryabov</a></p></td></tr>
-			<tr><td><p><b>G Scholar</b>:</p></td><td><p><a href="https://scholar.google.com/citations?user=wbf8vgcAAAAJ&hl=en">scholar.google.com/citations?user=wbf8vgcAAAAJ</a></p></td></tr>
+			<tr><td><p><b>G&nbsp;Scholar</b>:</p></td><td><p><a href="https://scholar.google.com/citations?user=wbf8vgcAAAAJ&hl=en">scholar.google.com/citations?user=wbf8vgcAAAAJ</a></p></td></tr>
 		</table>
 	</div>
 	<div id="skills">
