--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ div.tags {
 		<table>
 			<tr><td colspan="2"><p>Fun of programming and researching.<br>Trying to make the world a better place.</p></td></tr>
 			<tr><td><p><b>Email</b>:</p></td><td><p><a href="mailto:dryabov@yandex.ru">dryabov@yandex.ru</a></p></td></tr>
-			<tr><td><p><b>Address</b>:</p></td><td><p>Rostov-on-Don, Russia (ready to relocate)</p></td></tr>
+			<tr><td><p><b>Address</b>:</p></td><td><p>Yerevan, Armenia<br>(previously: Rostov-on-Don, Russia)<br>Ready to relocate</p></td></tr>
 			<tr><td colspan="2">&nbsp;</td></tr>
 			<tr><td><p><b>LinkedIn</b>:</p></td><td><p><a href="https://www.linkedin.com/in/dryabov/">linkedin.com/in/dryabov</a></p></td></tr>
 			<tr><td><p><b>GitHub</b>:</p></td><td><p><a href="https://github.com/dryabov">github.com/dryabov</a></p></td></tr>
