--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@ div.tags {
 			<tr><td><p><b>LinkedIn</b>:</p></td><td><p><a href="https://www.linkedin.com/in/dryabov/">linkedin.com/in/dryabov</a></p></td></tr>
 			<tr><td><p><b>GitHub</b>:</p></td><td><p><a href="https://github.com/dryabov">github.com/dryabov</a></p></td></tr>
 			<tr><td><p><b>G&nbsp;Scholar</b>:</p></td><td><p><a href="https://scholar.google.com/citations?user=wbf8vgcAAAAJ&hl=en">scholar.google.com/citations?user=wbf8vgcAAAAJ</a></p></td></tr>
+			<tr><td><p><b>stackOverflow</b>:</p></td><td><p><a href="https://stackoverflow.com/users/445811/denis-ryabov">stackoverflow.com/users/445811/denis-ryabov</a></p></td></tr>
 		</table>
 	</div>
 	<div id="skills">
