full-width header

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@ h1 {
 	text-shadow: .05rem 0 0 #333;
 	text-decoration: underline;
 	font-family: 'Barlow Condensed', sans-serif;
+	width: 74rem;
+	max-width: 100%;
+	margin: 0 auto;
+	padding: 0.5rem 0.5rem 0;
 }
 h2 {
 	font-size: 2rem;
@@ -221,7 +225,7 @@ div.tags {
 	aside {
 		float: left;
 		width: 35%;
-		min-height: 100vh;
+		min-height: calc(100vh - 3rem);
 		margin-right: 4.5rem;
 	}
 	div.filler {
@@ -250,8 +254,8 @@ div.tags {
 }
 </style>
 </head>
-<body><aside>
-	<h1>Denis Ryabov</h1>
+<body>
+<h1>Denis Ryabov</h1><aside>
 	<div id="about">
 		<h2>About</h2>
 		<table>
