adjust space around headers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body {
 h1, h2, h3 {
 	font-family: 'Flamenco', cursive;
 	margin: 0;
-	padding: 2rem 0 .25rem;
+	padding: 1.5rem 0 .25rem;
 	font-weight: bold;
 	line-height: 1.2;
 	text-align: left;
@@ -44,6 +44,7 @@ h1 {
 }
 h2 {
 	font-size: 2rem;
+	padding-bottom: 0;
 }
 h3 {
 	font-size: 1.5rem;
@@ -202,7 +203,7 @@ section > h3 > span {
 	position: absolute;
 	width: 3.5rem;
 	margin-left: -3.5rem;
-	top: 2.1rem;
+	top: 1.6rem;
 	word-break: break-word;
 	font-size: 1.4rem;
 	line-height: 1;
