add education's country info

--- a/index.html
+++ b/index.html
@@ -327,18 +327,18 @@ div.tags {
 		<h2>Education</h2>
 		<section class="global">
 			<h3><span>2009</span> PhD</h3>
-			<p>Southern Federal University</p>
+			<p>Southern Federal University (Russia)</p>
 			<p><i>Physics &amp; Mathematics</i></p>
 			<p>Thesis: "Investigation of some nonlinear mathematical models with discrete symmetry"</p>
 		</section>
 		<section class="global">
 			<h3><span>2005</span> MSc</h3>
-			<p>Rostov State University</p>
+			<p>Rostov State University (Russia)</p>
 			<p><i>Physics</i></p>
 		</section>
 		<section class="global">
 			<h3><span>2003</span> BSc</h3>
-			<p>Rostov State University</p>
+			<p>Rostov State University (Russia)</p>
 			<p><i>Physics</i></p>
 		</section>
 	</section>
