fix print version

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ div.tags {
 	body {
 		margin-bottom: 0;
 	}
-	aside, main {
+	h1, aside, main {
 		display: block;
 		width: 100%;
 		padding: 0;
