move projects to the top in the screen media view

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@ div.filler {
 }
 main {
 	width: 44rem;
+	display: inline-flex;
+	flex-direction: column;
+}
+#projects {
+	order: -1;
 }
 
 #skills > div.skill-tags {
