Add Mobile Planner to the projects list

--- a/index.html
+++ b/index.html
@@ -459,6 +459,10 @@ div.tags {
 			<h3><span>2006–2015</span> RusTypo</h3>
 			<p>Development of the Joomla! <a href="https://github.com/dryabov/rustypo">plugin</a> for Russian typography improvements.</p>
 		</section>
+		<section class="c/c++">
+			<h3><span>2003–2006</span> Mobile Planner</h3>
+			<p>Development of a client-server application for calculating and visualizing the signal intensity in the city from mobile base stations.</p>
+		</section>
 	</section>
 
 	<section id="publications">
