--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ div.tags {
 			<p>Work on different own and 3rd-party IT projects (frontend/backend development: PWA/js, Joomla/PHP/js, WordPress/PHP/js, Flask/Python/js, nodejs).</p>
 		</section>
 		<section class="global">
-			<h3><span>2003–Pr.</span> Institute of Physics, Southern Federal University</h3>
+			<h3><span>2003–2023</span> Institute of Physics, Southern Federal University</h3>
 			<p><i>Senior researcher</i></p>
 			<p>Scientific researches in the fields of nonlinear dynamics and condensed matter physics.</p>
 		</section>
