--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ div.tags {
 	<section id="work">
 		<h2>Work</h2>
 		<section class="global">
-			<h3><span>2010–Pr.</span> Sole proprietorship</h3>
+			<h3><span>2010–Pr.</span> Individual entrepreneur</h3>
 			<p>Work on different own and 3rd-party IT projects (frontend/backend development: PWA/js, Joomla/PHP/js, WordPress/PHP/js, Flask/Python/js, nodejs).</p>
 		</section>
 		<section class="global">
