add new articles

--- a/index.html
+++ b/index.html
@@ -468,6 +468,8 @@ div.tags {
 	<section id="publications">
 		<h2>Publications</h2>
 		<ul>
+			<li class="research math physics">G. Chechin, D. Ryabov. <a target="_blank" href="https://doi.org/10.1016/j.cnsns.2023.107176">Exact solutions of nonlinear dynamical equations for large-amplitude atomic vibrations in arbitrary monoatomic chains with fixed ends</a> // Communications in Nonlinear Science and Numerical Simulation 120 (2023) 107176.</li>
+			<li class="research math physics">D.S. Ryabov <i>et al.</i> <a target="_blank" href="https://doi.org/10.1007/s11071-023-08264-6">One-component delocalized nonlinear vibrational modes of square lattices</a> // Nonlinear Dynamics 111 (2023) 8135–8153.</li>
 			<li class="research math physics">G.M. Chechin, D.S. Ryabov. <a target="_blank" href="https://doi.org/10.22226/2410-3535-2020-4-523-534">Introduction to the theory of bushes of nonlinear normal modes for studying large-amplitude atomic vibrations in systems with discrete symmetry</a> // Letters on materials 10 (2020) 523.</li>
 			<li class="research math physics">D.S. Ryabov <i>et al.</i> <a target="_blank" href="https://doi.org/10.1007/s11071-020-06015-5">Delocalized nonlinear vibrational modes of triangular lattices</a> // Nonlinear Dynamics 102 (2020) 2793.</li>
 			<li class="research math physics">E.A. Korznikova <i>et al.</i> <a target="_blank" href="https://doi.org/10.1002/pssb.201800061">Delocalized Nonlinear Vibrational Modes in Graphene: Second Harmonic Generation and Negative Pressure</a> // Physica Status Solidi B Basic Research, 256 (2019) 1800061.</li>
