--- a/index.html
+++ b/index.html
@@ -366,20 +366,24 @@ div.tags {
 
 	<section id="projects">
 		<h2>Projects</h2>
-		<section class="research flask python typescript frontend backend">
-			<h3><span>2022–Pr.</span> XAFS Spectra Analyzer</h3>
-			<p>Developing an online tool to analyze experimental X-ray absorption spectra. Made with Python, Flask, BokehJS, and TypeScript.</p>
-		</section>
 		<section class="joomla php">
 			<h3><span>2019-Pr.</span> JED Checker contributor</h3>
 			<p><a href="https://extensions.joomla.org/extension/jedchecker/">JED Checker</a> is a tool to validate Joomla! extensions before submitting them to the official Joomla! Extension Directory.</p>
 			<p>Implemented a new design, upgraded code to support Joomla!4.x, and added many new checks: validation of XML manifest files and language translation files, check file references, PHP syntax check, etc.</p>
+		</section>
+		<section class="wordpress php frontend backend nodejs">
+			<h3><span>2017–Pr.</span> PageSpeed Ninja</h3>
+			<p>The PageSpeed Ninja project allow to improve performance of WordPress-based website and get higher scores in the PageSpeed Insight test. It consists of <a href="https://pagespeed.ninja/">website checker</a>, <a href="https://wordpress.org/plugins/psn-pagespeed-ninja/">WordPress plugin</a>, and above-the-fold generation service (written in node.js).</p>
 		</section>
 		<section class="joomla php backend frontend">
 			<h3><span>2009–Pr.</span> Mobile Joomla</h3>
 			<p>Development of the Mobile Joomla! extension that is the best way to adapt Joomla-based website for mobiles and get better performance.</p>
 		</section>
 
+		<section class="research flask python typescript frontend backend">
+			<h3><span>2022–2023</span> XAFS Spectra Analyzer</h3>
+			<p>Developing an online tool to analyze experimental X-ray absorption spectra. Made with Python, Flask, BokehJS, and TypeScript.</p>
+		</section>
 		<section class="php c/c++">
 			<h3><span>2021</span> PHP language contributor</h3>
 			<p>Fixed processing of escaped quotes in the ini parser of the <a href="https://www.php.net/">PHP</a> language.</p>
@@ -410,10 +414,6 @@ div.tags {
 			<h3><span>2020</span> sample_prof contributor</h3>
 			<p><a href="https://github.com/nikic/sample_prof">Sample_prof</a> is the profiler for PHP with line-level resolution.</p>
 			<p>Fixed processing of cli options, numeration of lines in output, and added a check of nested runs.</p>
-		</section>
-		<section class="wordpress php frontend backend nodejs">
-			<h3><span>2017–2020</span> PageSpeed Ninja</h3>
-			<p>The PageSpeed Ninja project allow to improve performance of WordPress-based website and get higher scores in the PageSpeed Insight test. It consists of <a href="https://pagespeed.ninja/">website checker</a>, <a href="https://wordpress.org/plugins/psn-pagespeed-ninja/">WordPress plugin</a>, and above-the-fold generation service (written in node.js).</p>
 		</section>
 		<section class="tex">
 			<h3><span>2011–2020</span> rmathbr</h3>
